# website_restaurant

./: .coverage  .dockerignore  .editorconfig  .env.example  .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yml  pyproject.toml
config/: .gitignore  settings.py  urls.py
events/: admin.py  forms.py  models.py  tests.py  urls.py  views.py
htmlcov/: class_index.html  function_index.html  index.html  manage_py.html  status.json  z_01137fc3024399a3___init___py.html  z_1ea838694151cac8___init___py.html  z_1ea838694151cac8_celery_py.html  z_1ea838694151cac8_settings_py.html  z_1ea838694151cac8_urls_py.html  z_415166f6786562ae___init___py.html  z_4d0e3ab125fe3660___init___py.html  z_605338352d4b6837_0001_initial_py.html  z_605338352d4b6837_0002_rename_count_of_seats_table_capacity_hall_capacity_and_more_py.html  z_605338352d4b6837_0003_alter_table_number_py.html  z_605338352d4b6837_0004_teammember_py.html  z_605338352d4b6837_0005_teammember_position_department_py.html  z_605338352d4b6837_0006_alter_teammember_description_py.html  z_605338352d4b6837_0007_remove_table_hall_delete_hall_py.html  z_605338352d4b6837___init___py.html  z_71b2ab638ec648ca___init___py.html  z_809601a66e33f4cc___init___py.html  z_86b34701b3eeab4d___init___py.html  z_86b34701b3eeab4d_admin_py.html  z_86b34701b3eeab4d_apps_py.html  z_86b34701b3eeab4d_models_py.html  z_86b34701b3eeab4d_tests_py.html  z_8ced497f7ceffd84___init___py.html  z_8ced497f7ceffd84_admin_py.html  z_8ced497f7ceffd84_apps_py.html  z_8ced497f7ceffd84_models_py.html  (+64 more)
users/: admin.py  (+4 more)
(+84 files in other folders)
