[tool.poetry]
name = "websiterestaurant"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pre-commit = "^4.5.1"
black = "^26.1.0"
mypy = "^1.19.1"
flake8 = "^7.3.0"
isort = "^8.0.0"
bandit = "^1.9.4"
pylint = "^4.0.5"
pytest = "^9.0.2"
docformatter = "^1.7.7"
django-celery-results = "^2.6.0"
python-dotenv = "^1.2.1"
django = ">=4.2,<6.0"
django-celery-beat = "^2.8.1"

psycopg2-binary = "^2.9.11"
django-environ = "^0.12.1"

celery = "^5.6.2"
django-filter = "^25.2"
coverage = "^7.13.4"
drf-yasg = "^1.21.14"
requests = "^2.32.5"
django-cors-headers = "^4.9.0"
pillow = "^12.1.1"


ipython = "^9.7.0"
django-crispy-forms = "^2.5"

redis = "^7.2.0"
pytest-django = "^4.12.0"
pytest-cov = "^7.0.0"
django-redis = "^6.0.0"

[tool.pytest.ini_options]
DJANGO_SETTINGS_MODULE = "config.settings"
python_files = ["test_*.py", "*_test.py", "tests.py"]
addopts = "--nomigrations --strict-markers"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
